tests/baselines/reference/restParameterWithoutAnnotationIsAnyArray.errors.txt
==== tests/cases/compiler/restParameterWithoutAnnotationIsAnyArray.ts (3 errors) ====
    // Rest parameters without type annotations are 'any', errors only for the functions with 2 rest params
    
    function foo(...x) { }
    var f = function foo(...x) { }
    var f2 = (...x, ...y) => { }
              ~~~~
!!! restParameterWithoutAnnotationIsAnyArray.ts(5,11): error TS1014: Rest parameter must be last in list.
    
    class C {
        foo(...x) { }
    }
    
    interface I {
        (...x);
        foo(...x, ...y);
            ~~~~
!!! restParameterWithoutAnnotationIsAnyArray.ts(13,9): error TS1014: Rest parameter must be last in list.
    }
    
    var a: {
        (...x);
        foo(...x);
    }
    
    var b = {
        foo(...x) { },
        a: function foo(...x, ...y) { },
                        ~~~~
!!! restParameterWithoutAnnotationIsAnyArray.ts(23,21): error TS1014: Rest parameter must be last in list.
        b: (...x) => { }
    }
    